--- a/src/index.css
+++ b/src/index.css
@@ -18,19 +18,78 @@ html {
 }
 
 body {
-  height: 100vh;
+  /* height: 100vh; */
   color: #495057;
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
+}
+
+.header-card {
+  padding: 2rem 0;
+  text-align: center;
+  background-color: #ffa94d1f;
+  border: 4px solid var(--color-medium);
+  border-radius: 14px;
+  margin: 1rem 0;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header h1 {
+  font-size: 4rem;
 }
 
 .app {
-  min-height: 66vh;
-  display: grid;
+  min-height: 100vh;
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; */
+  /* display: grid;
   grid-template-columns: 34rem 44rem;
   column-gap: 4rem;
-  align-items: start;
+  align-items: start; */
+}
+
+.section {
+  padding: 4rem 0;
+  width: 100%;
+}
+
+.container {
+  width: 100%;
+  max-width: 1040px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+.friends-added .col--right {
+  margin-top: 1.5rem;
+}
+
+@media (min-width: 768px) {
+  .friends-added .row {
+    display: flex;
+    flex-wrap: nowrap;
+    margin-left: -12px;
+    margin-right: -12px;
+  }
+
+  .friends-added .row .col {
+    width: 100%;
+    max-width: 50%;
+    flex: 0 0 50%;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  .friends-added .row .col--right {
+    margin-top: 0;
+  }
 }
 
 .button {
@@ -95,8 +154,17 @@ body {
 }
 
 .sidebar > .button {
-  float: right;
-  margin-right: 1.2rem;
+  /* float: right;
+  margin-right: 1.2rem; */
+  /* text-align: ; */
+}
+
+.sidebar > .add-friend-util-button {
+  text-align: center;
+}
+
+.friends-added .sidebar > .add-friend-util-button {
+  text-align: end;
 }
 
 .green {
@@ -121,6 +189,9 @@ form {
   grid-template-columns: 1fr 1.5fr;
   margin-bottom: 1.6rem;
   padding: 1.2rem;
+  /* max-width: 500px;
+  margin-left: auto;
+  margin-right: auto; */
 }
 .form-split-bill {
   grid-template-columns: 1fr 12rem;
